# GitAction_template

./: CMakeLists.txt  Dockerfile  README.md  build_and_test.py  cib.py
.github/workflows/: DockerHub.yml  GithubPackage.yml  build_test.yml  cicd.yml  docker.yml  release.yml
src/: example1.c
src/simple-example/: example1.cpp
src/sort/: insertion.cpp  insertion.hpp  sort.hpp
test/: CMakeLists.txt
test/unit_test/: test_sort.cpp
